test/cases/errors/harmony-import-missing2/errors.js
module.exports = [
	[/Can't resolve '.\/missing1'/],
	[/Can't resolve '.\/missing2'/]
];
